add popular videos section

--- a/styles/section-cards.module.css
+++ b/styles/section-cards.module.css
@@ -19,6 +19,12 @@
   margin-right: 0.75rem /* 12px */;
   overflow-x: scroll;
   overflow-y: hidden;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.cardWrapper::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .wrap {
